<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/dlg_create_folder_tv_message"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/dlg_create_folder_tv_message"
            android:textSize="22sp"
            android:textColor="@color/white"
            
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dlg_create_folder_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" 
            
            android:layout_marginLeft="20dp" 
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/dlg_create_folder_tv_folder_set"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            
            android:text="@string/dlg_create_folder_tv_folder_set"
            android:textSize="25dp" />

        <CheckBox
            android:id="@+id/dlg_create_folder_cb_folder_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:layout_marginBottom="10dp"
        
        >

        <Button
            android:id="@+id/dlg_create_folder_bt_ok"
            
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:text="@string/generic_bt_ok"
            android:textSize="25dp" 
            android:textColor="@color/blue1"
            
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            
            android:layout_marginBottom="0dp"
            
            />

        <Button
            android:id="@+id/dlg_create_folder_cancel"

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            

            android:text="@string/generic_bt_cancel"
            android:textSize="25dp" 
            
            android:textColor="@color/red"
            />
    </LinearLayout>

</LinearLayout>