<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/dlg_input_empty_LL_root"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/dlg_input_empty_LL_message"
        >

        <TextView
            android:id="@+id/dlg_input_empty_tv"
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="25dp"
            android:text="@string/dlg_input_empty_message"
            
            android:paddingBottom="20dp"
            
            android:gravity="center"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        
         
        android:id="@+id/dlg_input_empty_LL_buttons"
        
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/dlg_input_empty_btn_reenter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            
            android:minWidth="160dp"
            
            android:textSize="22dp"
            android:text="@string/dlg_input_empty_reenter"
            android:textColor="@color/blue1"
            
            android:layout_weight="1"
            
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            
            
            android:background="@color/white"
            
            />

        <Button
            android:id="@+id/dlg_input_empty_btn_cancel"
            
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            
            android:minWidth="160dp"
            
            android:textSize="25dp"
            android:text="@string/dlg_input_empty_cancel"
            android:textColor="@color/red"
            
            android:layout_weight="1"
            
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            
            android:background="@color/white"
            
            />

    </LinearLayout>

</LinearLayout>